# zipper_project

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_DRAFT.md  RELEASE_NOTES.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: create_release.ps1  dev_setup.ps1  dev_setup.sh  install_choco.ps1  rebuild_exes.ps1  release.ps1  release.sh
tests/: test_basic.py  test_cli_improvements.py  test_core.py  test_force.py  test_version.py
zipper/: cli.py  core.py  gui.py  gui_dnd.py
