[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zipper"
version = "0.1.1"
description = "Create zip archives from files and directories"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
dependencies = []
authors = [ { name = "Zipper Maintainer", email = "maintainer@example.com" } ]
maintainers = [ { name = "Zipper Maintainer", email = "maintainer@example.com" } ]
license = { text = "MIT" }
license-files = ["LICENSE"]
keywords = ["zip", "archive", "compression", "cli", "tkinter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Intended Audience :: Developers",
]
urls = { "Homepage" = "https://example.com/zipper", "Repository" = "https://example.com/zipper.git", "Bug Tracker" = "https://example.com/zipper/issues" }

[project.scripts]
zipper = "zipper.cli:main"

[project.optional-dependencies]
encryption = ["pyzipper"]
progress = ["tqdm"]
dnd = ["tkinterdnd2"]
